update demo 12