@@ -1,6 +1,7 @@
 package demo.pvdemo12fullrestservices;
 
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -8,39 +9,20 @@ import java.net.URI;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/app")
 @CrossOrigin
 public class RecipeController
 {
-
-    long nextId = 5L;
-    private Map<Long, Recipe> recipeMap = new HashMap<>();
-
-    {
-        recipeMap.put(1L, new Recipe(1L, "Chicken Tikka Masala", 6));
-        recipeMap.put(2L, new Recipe(2L, "Chicken Roganghosh", 7));
-        recipeMap.put(3L, new Recipe(3L, "Chicken Dopyaja", 8));
-        recipeMap.put(4L, new Recipe(4L, "Chicken Tandoori", 9));
-    }
-
-    @GetMapping(value = "recipesV1")
-    public Collection<Recipe> getRecipesV1()
-    {
-        return recipeMap.values();
-    }
-
-    @GetMapping(value = "/recipesV2")
-    public ResponseEntity<Collection<Recipe>> getRecipesV2()
-    {
-        return ResponseEntity.ok().body(recipeMap.values());
-    }
+    @Autowired
+    private RecipeRepository repository;
 
     @GetMapping(value = "/recipe/{id}")
     public ResponseEntity<Recipe> getRecipeById(@PathVariable long id)
     {
-        Recipe recipe = recipeMap.get(id);
+        Recipe recipe = repository.getById(id);
 
         if (recipe == null)
             return ResponseEntity.notFound().build();
@@ -51,25 +33,36 @@ public class RecipeController
     @GetMapping(value = "/recipes")
     public ResponseEntity<Collection<Recipe>> getRecipesWithIngredientsMoreThan(@RequestParam(value = "min", required = false, defaultValue = "0") int min)
     {
-        Collection<Recipe> recipes = recipeMap.values()
+        Collection<Recipe> recipes = repository.getAll()
                 .stream()
                 .filter(recipe -> recipe.getIngredientCount() > min)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok().body(recipes);
 
     }
 
-    @GetMapping(value = "/count")
-    public ResponseEntity<Integer> getCount()
-    {
-        return ResponseEntity.ok().body(recipeMap.values().size());
-    }
-
     @PostMapping(value="/recipes")
     public ResponseEntity<Recipe> insertRecipe(@RequestBody Recipe recipe){
-        recipe.setId(nextId++);
-        recipeMap.put(recipe.getId(), recipe);
+        repository.insert(recipe);
         URI uri = URI.create("/app/recipes" + recipe.getId());
         return ResponseEntity.created(uri).body(recipe);
     }
+
+    @PutMapping(value = "/recipes/{id}")
+    public ResponseEntity<Void> updateRecipe(@PathVariable long id, @RequestBody Recipe recipe){
+        if(!repository.update(recipe))
+            return ResponseEntity.notFound().build();
+        else
+            return ResponseEntity.ok().build();
+    }
+
+    @DeleteMapping(value = "/recipes/{id}")
+    public ResponseEntity<Void> deleteRecipe(@PathVariable long id){
+        if(!repository.delete(id))
+            return ResponseEntity.notFound().build();
+        else
+            return ResponseEntity.ok().build();
+    }
+
+
 }
